Fix alignment

--- a/assets/css/public.css
+++ b/assets/css/public.css
@@ -85,9 +85,11 @@ table.timetable {
 .banner > h1 {
   border: none;
   color: {{ site.colors.background }};
-  text-stroke: 2px {{ site.colors.primary }};
-  -webkit-text-stroke: 2px {{ site.colors.primary }};
-   paint-order: stroke fill;
+  /* text-stroke: 2px {{ site.colors.primary }}; */
+  /* -webkit-text-stroke: 2px {{ site.colors.primary }}; */
+  /* paint-order: stroke fill; */
+  /* -webkit-paint-order: stroke fill; */
+  text-shadow: 0 0 2px {{ site.colors.primary }},0 0 2px {{ site.colors.primary }},0 0 2px {{ site.colors.primary }},0 0 2px {{ site.colors.primary }},0 0 2px {{ site.colors.primary }},0 0 2px {{ site.colors.primary }},0 0 2px {{ site.colors.primary }},0 0 2px {{ site.colors.primary }},0 0 2px {{ site.colors.primary }},0 0 2px {{ site.colors.primary }},0 0 2px {{ site.colors.primary }},0 0 2px {{ site.colors.primary }},0 0 2px {{ site.colors.primary }},0 0 2px {{ site.colors.primary }},0 0 2px {{ site.colors.primary }},0 0 2px {{ site.colors.primary }},0 0 2px {{ site.colors.primary }},0 0 2px {{ site.colors.primary }},0 0 2px {{ site.colors.primary }},0 0 2px {{ site.colors.primary }},0 0 2px {{ site.colors.primary }};
 
   position: absolute;
   top: 50%;
@@ -114,8 +116,8 @@ table.timetable {
 /* Contact */
 
 table.contact {
-  margin-left: auto;
-  margin-right: auto;
+  /* margin-left: auto; */
+  /* margin-right: auto; */
   border-collapse: collapse;
   border-spacing: 1em 1em;
 }
